[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
napi        = { version = "2", features = [ 'chrono_date'] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
